[project]
name = "daystack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "crypto>=1.4.1",
    "fastapi>=0.110.0",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "uvicorn[standard]>=0.29.0",
]
